--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ main section div{
     background-size: cover;
 }
 .parallax_projects {
-    background-image: url("images/bg3.jpg");
+    background-image: url("images/bg4.jpeg");
     height: 800px; 
     background-attachment: fixed;
     background-position: center;
