--- a/css/main.css
+++ b/css/main.css
@@ -7,25 +7,40 @@ html{
 
 main section{
     width: 100%;
-    min-height: 600px;
+    min-height: 500px;
 }
 
 footer{
     margin: 0;
     min-height: 100px;
-    background-color: #f4f4f4;
+    background-color: #97999b;
 }
 
-footer p{
-    /* text-align: center; */
+footer div{
+    position: relative;
+    width: 100%;
+    top: 20px;
 }
 
-/* section div h1{ */
-    /* position: relative; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* width: 10% */
-/* } */
+footer div ul{
+    position: absolute;
+    margin: 0 auto;
+    width: 40%;
+    left: 35%;
+    white-space: nowrap;
+}
+
+footer ul li{
+    width: 33%;
+    display: inline-block;
+
+}
+
+footer ul img{
+    width: 50px;
+    height: 40px;
+}
+
 
 div button{
     position: absolute;
@@ -33,8 +48,8 @@ div button{
     padding: 20px;
     border-radius: 20px;
     background-color: rgba(194, 204, 204, 0.719);
-    top: 60%;
-    left: 8%;
+    top: 90%;
+    left: 23%;
     transition: all 0.5s;
     border: none;
 }
@@ -45,7 +60,7 @@ div button{
     /* display: inline-block; */
     height: 30%;
     width: 40%;
-    top: 5%;
+    top: 20%;
     left: 15%;
     border-radius: 20px;
     /* border: 4px solid black; */
@@ -67,9 +82,9 @@ div button{
 #about_div{
     position: relative;
     background-color: rgba(0,0,0,0.5);
-    height: 44%;
+    height: 40%;
     width: 30%;
-    top: -5%;
+    top: 10%;
     left: 45%;
     border-radius: 20px;
 }
@@ -81,7 +96,16 @@ div button{
     font-size: 24px;
     color: #f4f4f4;
     border-radius: inherit;
-    background-color: rgba(0,0,0, 0.5);
+}
+
+#home-div{
+    position: relative;
+    height: 300px;
+    top: 70px;
+    width: 500px;
+    /* border: 3px solid black; */
+    background-color: rgba(0,0,0, 0);
+    border: none;
 }
 
 #welcome{
@@ -89,7 +113,7 @@ div button{
     font-size: 82px;
     letter-spacing: 10px;
     color: #f4f4f4;
-    top: 20%;
+    top: 0;
     left: 0;
     padding: 20px;
     width: fit-content
@@ -102,7 +126,7 @@ div button{
     font-weight: lighter;
     color: #f4f4f4;
     top: 38%;
-    left: 7%;
+    left: 95px;
     width: fit-content
 }
 
