--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 html{
     scroll-behavior: smooth;
     font-family: 'Fira Sans', sans serif;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 main section{
@@ -14,6 +16,7 @@ footer{
     position: relative;
     margin: 0;
     padding: 0;
+    width: 1350px;
     min-height: 500px;
     background-color: #97999b;
 }
@@ -41,6 +44,12 @@ footer h1{
     background-color: rgba(0,0,0,0.1);
     border: 0px;
     border-radius: 24px;
+}
+
+input::placeholder{
+    color: #313131;
+    opacity: 1;
+    transition: color 0.5s;
 }
 
 .forms input{
@@ -224,7 +233,7 @@ div button:after{
 }
 
 #navbar li{
-    float: inline-end;
+    float: right;
 }
 
 #navbar li a{
@@ -285,10 +294,11 @@ main section div{
 
 /* PSEUDOCLASSES */
 #navbar ul li a:hover{
-    color: rgb(245, 246, 247);
-    background-color: #f4511e;
-    width: 120px;
-    font-size: 32px;
+    color: rgb(255, 255, 255);
+    /* background-color: #f4511e; */
+    border: 3px solid #4b4b4b;
+    width: 150px;
+    font-size: 30px;
     /* text-align: left; */
 }
 
